# esp32_envionment_monitor

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.lint  Doxyfile  Makefile  README.md  partition_table.csv  sdkconfig
design/: bsec.puml  sensor_hub.puml  tasks.puml  veml.puml
main/: CMakeLists.txt  bme688.cpp  bme688.h  bsec.cpp  bsec.h  common.cpp  common.h  main.cpp  mqtt_task.cpp  mqtt_task.h  mutex_base.cpp  mutex_base.h  safe_i2c.cpp  safe_i2c.h  sensor_hub.cpp  sensor_hub.h  veml.cpp  veml.h  wifi_network.cpp  wifi_network.h
main/bsec/: placeholder.md
